# auto-pr-body-generator

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  completion.py  diff_analysis.py  diff_analyzer_service.py  entrypoint.sh  main.py  pr_body_generator.py  pr_parser.py  prompt.py  prompt_generator.py  pull_request.py  pyproject.toml  requirements.txt
.github/workflows/: write_pr.yml
tests/: lorem_ipsum.txt  test_completion.py  test_diff_analysis.py  test_pd_body_generator.py  test_pr_parser.py  test_prompt.py  test_prompt_generator.py  test_pull_request.py
